# LA-BUMSY-RESTAURANT-MOBILE-APP

./: .gitignore  README.md  pyproject.toml  requirements.txt  txt
restaurant_backend/: README.md  pyproject.toml  railway.toml  requirements.txt  scratch_test2.py  test_flw.py  test_orders.py  test_smtp_connection.py  test_verify.py
restaurant_backend/app/: config.py  main.py
restaurant_backend/app/db/: __init__.py  database.py  models.py
restaurant_backend/app/db/migrations/: alembic.ini  env.py
restaurant_backend/app/routes/: admin_users.py  auth.py  delivery.py  food.py  orders.py  payment.py  profile.py
restaurant_backend/app/schemas/: auth.py  delivery.py  food.py  order.py  user.py
restaurant_backend/app/services/: auth_service.py  delivery_service.py  email_templates.py  email_verification_service.py  food_service.py  notification_service.py  order_service.py  payment_service.py  user_service.py
restaurant_backend/app/tests/: __init__.py  helpers.py  test_auth_service.py  test_food_service.py  test_order_service.py  test_security.py  test_user_service.py
restaurant_backend/app/utils/: file_upload.py  security.py
restaurant_frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js
restaurant_frontend/src/: App.jsx  index.css
restaurant_frontend/src/api/: axiosInstance.js
restaurant_frontend/src/components/: BottomNav.jsx  FoodCard.jsx  Navbar.jsx  OrderCard.jsx  ProfileModal.jsx
restaurant_frontend/src/routes/: ProtectedRoute.jsx
restaurant_frontend/src/stores/: authStore.js  cartStore.js  socketStore.js
(+20 files in other folders)
