[project]
name = "big-mummy-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt==4.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.136.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.3",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.45.0",
]

[tool.uv.workspace]
members = [
    "restaurant_backend",
]
